<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.aqi.mylaundry.MainActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/silahkan_login"
    android:textSize="30sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.08"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="29dp"
    android:id="@+id/textView" />

<EditText
    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="138dp"
    android:ems="10"
    android:inputType="textPersonName"
    android:hint="@string/masukan_username"
    android:layout_below="@+id/textView"
    android:layout_centerHorizontal="true" />

<EditText
    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/username"
    android:layout_alignStart="@+id/username"
    android:layout_below="@+id/username"
    android:layout_marginTop="15dp"
    android:ems="10"
    android:inputType="textPassword"
    android:hint="@string/masukan_password" />

<CheckBox
    android:id="@+id/checkBox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:text="@string/tampilkan_password"
    android:layout_below="@+id/password"
    android:layout_alignLeft="@+id/password"
    android:layout_alignStart="@+id/password" />

<Button
    android:id="@+id/login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="33dp"
    android:text="@string/login"
    android:onClick="login"
    android:layout_below="@+id/checkBox"
    android:layout_alignRight="@+id/textView"
    android:layout_alignEnd="@+id/textView" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="11dp"
    android:text="@string/masukan_username_dan_password_dengan_benar"
    android:layout_below="@+id/textView"
    android:layout_centerHorizontal="true" />

</RelativeLayout>